# be/api/router.go
@@ -15,12 +15,12 @@ func SetupRoutes(r *gin.Engine, userHandler *handler.UserHandler, session reposi
 	api := r.Group("/api")
 	api.POST("/auth/register", userHandler.Register)
 	api.POST("/auth/login", userHandler.Login)
-	api.POST("/refresh", userHandler.Refresh)
+	api.POST("/auth/refresh", userHandler.Refresh)
 	api.GET("/activate", userHandler.Activate)
-	api.POST("/password-reset", userHandler.CheckPasswordReset)
-	api.PATCH("/email/password-reset", userHandler.ResetPassword)
+	api.POST("/user/password-reset", userHandler.CheckPasswordReset)
+	api.PATCH("/user/email/password-reset", userHandler.ResetPassword)
 	api.DELETE("/user/:email", userHandler.DeleteUser)
 	api.Use(middleware.AuthMiddleware(config.AccessSecret, session))
-	api.GET("/session", userHandler.Session)
+	api.GET("/user/session", userHandler.Session)
 	api.POST("/auth/logout", userHandler.Logout)
 }
